--- a/codebook/RMD_codebook_draft_ST.Rmd
+++ b/codebook/RMD_codebook_draft_ST.Rmd
@@ -3041,3 +3041,202 @@ complete_rnd2 %>%
   labs(title = 'Distribution of rqd')
 ```
 
+
+## Posttraumatic Risk Seeking Scale (PRSS)
+
+### PRSS Description
+
+The PRSS is a 4-item questionnaire designed to measure adult attachment style.
+
+For the present study, 4 items from the PRSS were collected in order to #TODO: insert text here
+
+  No items need to be reverse scored. *TODO: need change text here Higher scores indicate more severe mental health symptoms. *
+
+The missing data rule was applied. Calculations were completed for participants with 33% or less missing data (this includes -77 responses)
+
+Reference: [@kerig2019linking](https://onlinelibrary.wiley.com/doi/abs/10.1111/cpsp.12280); [DOI](https://doi.org/10.1111/cpsp.12280)
+
+### PRSS Variables
+
+#### Value Labels
+
+All PRSS variables have the same response options.
+
+
+```{r PRSS-label-table, results = 'asis'}
+
+prss_label_df <- data.frame(
+  value = c("0", "1", "2", "3", "4"),
+  label = c("None of the time",
+            "A little of the time",
+            "Some of the time",
+            "Much of the time",
+            "Most of the time")) %>% 
+  t() %>% 
+  as.data.frame()
+
+prss_label_df <- setNames(prss_label_df[-1, ], unlist(prss_label_df[1, ]))
+
+
+#create table
+prss_label_table <- prss_label_df %>%
+  gt() %>% 
+  tab_options(table.border.top.width = 1, table.border.bottom.width = 1,
+              table.border.left.width = 1, table.border.right.width = 1) %>% 
+  cols_width(everything() ~ px(180)) %>% 
+  apply_labtab_theme()
+
+# Print the table
+print(prss_label_table)
+
+
+```
+
+#### Survey Items
+
+PRSS survey items are presented in the following table:
+  
+```{r prss-var-prep}
+# Pull question wording from qualtrics data
+prss_word <- qualtrics %>% 
+  select(starts_with("ps")) %>% 
+  slice(1)
+
+#create table with variable name, description, and notes
+prss_word_long <- prss_word %>% 
+  pivot_longer(cols = everything(), 
+               names_to = "var_name",
+               values_to = "description") %>% 
+  mutate(description = str_replace(description, "^\\d+\\.\\s*", ""),
+         var_name = str_to_lower(var_name), 
+         notes = as.character(""))
+
+```
+
+
+```{r prss-var-table, results ='asis'}
+# Create the gt table object and apply generic theme
+my_gt_table <- gt(prss_word_long)
+
+# Table-specific formatting (col width, names)
+my_gt_table <- my_gt_table %>% 
+  cols_label(var_name = "Variable", 
+             description = "Description",
+             notes = "Notes") %>% 
+  apply_tbl_theme() %>% 
+  cols_width(notes ~ px(150),
+             var_name ~ px(100)) %>%
+  tab_style(style = cell_text(align = "left"), locations = cells_column_labels())
+
+# Print the table
+print(my_gt_table)
+
+#WHEN RENDERING WITH PDF USE: 
+#my_gt_table
+```
+
+#### Scale and Subscales
+
+Information on the total score and subscale variables are below. Variables were constructed by summing included items. 
+
+```{r prss alpha, echo = FALSE, eval = TRUE, message = FALSE, warning = FALSE}
+#Calculate internal reliability 
+prss_alpha <-
+  complete_rnd2 %>%
+  select(ps9:ps13) %>%  # TODO: I wasn't sure why JP only use item from 9 - 13
+  psych::alpha(check.keys = TRUE)
+
+```
+
+```{r PRSS-scale-table, results = 'asis'}
+
+
+```
+### Summary Statistics
+
+#### Descriptive Statistics
+
+Descriptive statistics are presented below for each item, total, and subscale score:
+  
+```{r prss-mean-items}
+# Create subset of prss items
+prss_data_subset <- complete_rnd2 %>%
+  select(starts_with("ps"), id)
+
+# Calculate total and average
+complete_rnd2 <-
+  prss_data_subset %>%
+  composite_total_avg_fun(
+    id = 'id',
+    max_value = 13,
+    n_items = 5
+  ) %>%
+  distinct(
+    across(
+      .cols = everything()
+    )
+  ) %>%
+  rename(
+    prss_total = sum_values,
+    prss_avg = mean_values
+  ) %>%
+  mutate(
+    across(
+      c(
+        prss_total,
+        prss_avg
+      ),
+      ~case_when(
+        id %in% prss_remove ~ NA_real_,
+        TRUE ~ .x
+      )
+    )
+  )
+
+# Calculate the summary statistics for each variable
+prss_summary_data <- lapply(prss_data_subset, function(x) {
+  mean_val <- sprintf("%.2f", round(mean(x, na.rm = TRUE), 2))
+  sd_val <- round(sd(x, na.rm = TRUE), 2)
+  range_val <- paste(min(x, na.rm = TRUE), max(x, na.rm = TRUE), sep = "-")
+  miss_val <- round(mean(is.na(x)) * 100, 2)
+  c(Mean = mean_val, SD = sd_val, Range = range_val, Missing = paste(miss_val, "%", sep = ""))
+})
+
+# Convert summary_data to a data frame
+prss_summary_data <- as.data.frame(prss_summary_data)
+
+# Set items as first row
+prss_summary_data <- rbind(names(prss_summary_data), prss_summary_data) %>% 
+  t() %>% 
+  as.data.frame()
+
+# Create the gt table
+prss_tbl <- prss_summary_data %>%
+  gt() %>%
+  cols_label(`1` = "Variable",
+             Range = "Range*",
+             Missing = "% Missing") %>% 
+  cols_width(everything() ~ px(115)) %>%
+  cols_align(columns = c("Mean", "SD", "Range", "Missing"), align = "center") %>% 
+  tab_footnote("*Range of data values") %>% 
+  tab_options(table.border.bottom.style = "hidden") %>%
+  apply_tbl_theme()
+
+# Render the table
+prss_tbl
+
+```
+
+#### Distributions
+
+Distributions are presented below for the total score and each subscale:
+  
+```{r PRSS-distributions, class.source='fold', echo = FALSE}
+complete_rnd2 %>%
+  composite_hist(
+    x = prss_avg
+  ) +
+  labs(title = "Distribution of Average Scores for the PRSS")
+
+
+```
