--- a/codebook/RMD_codebook_draft_ST.Rmd
+++ b/codebook/RMD_codebook_draft_ST.Rmd
@@ -30,7 +30,7 @@ output:
 bibliography: tpw_references.bib
 ---
 
-
+TODO: double check codebook_fun.r composite_total_avg_fun
 
 ```{r setup, include = FALSE}
 library(tidyverse)
@@ -542,6 +542,7 @@ cesd_alpha_table <- tibble(
 
 ```{r CESD-scale-table, results = 'asis'}
 # Create the table as a data frame
+# TODO: should the calculation use revers score?
 cesd_scale_df <- data.frame(
   var_name = c("cesd_total", "cesd_dep_symp_total", "cesd_pos_aff_total"),
   scale = c("Total Score (20)", "Depression (16)", "Positive Affect (4)"),
@@ -3522,3 +3523,235 @@ ssq_data_subset %>%
   )
 ```
 
+
+## Elliott Delinquency Scale (EDS) Friends/Peers report
+
+### EDS Description
+
+The EDS is a 39-item questionnaire designed to measure *insert*.
+
+For the present study, 39 items from the EDS were collected in order to #TODO: insert text here
+
+All 39 items need to be reverse scored. *TODO: need change text here Higher scores indicate more severe mental health symptoms. *
+  
+The missing data rule was applied. Calculations were completed for participants with 33% or less missing data (this includes -77 responses)
+
+Reference: [ @feiring2005persistence](https://journals.sagepub.com/doi/abs/10.1177/1077559505276686); [DOI](https://doi.org/10.1177/1077559505276686)
+
+
+### EDS Variables
+
+#### Value Labels
+
+All EDS variables have the same response options.
+
+
+```{r EDS-label-table, results = 'asis'}
+
+eds_label_df <- data.frame(
+  value = c("1", "2", "3", "4", "5", "6"),
+  label = c("All",
+            "Most",
+            "Some",
+            "Very Few",
+            "None",
+            "Does not apply")) %>% 
+  t() %>% 
+  as.data.frame()
+
+eds_label_df <- setNames(eds_label_df[-1, ], unlist(eds_label_df[1, ]))
+
+
+#create table
+eds_label_table <- eds_label_df %>%
+  gt() %>% 
+  tab_options(table.border.top.width = 1, table.border.bottom.width = 1,
+              table.border.left.width = 1, table.border.right.width = 1) %>% 
+  cols_width(everything() ~ px(150)) %>% 
+  apply_labtab_theme()
+
+# Print the table
+print(eds_label_table)
+
+
+```
+
+#### Survey Items
+
+EDS survey items are presented in the following table:
+  
+```{r eds-var-prep}
+# Pull question wording from qualtrics data
+eds_word <- qualtrics %>% 
+  select(starts_with("elf")) %>% 
+  slice(1)
+
+#create table with variable name, description, and notes
+eds_word_long <- eds_word %>% 
+  pivot_longer(cols = everything(), 
+               names_to = "var_name",
+               values_to = "description") %>% 
+  mutate(description = str_replace(description, "^\\d+\\.\\s*", ""),
+         var_name = str_to_lower(var_name), 
+         notes = paste0("This item should be reverse scored. `", var_name, "_c` is reverse scored")
+           ) %>% 
+  slice(1:39)
+# TODO: need double check reverse code variable name, it's inconsistant with other measure's reverse score name 
+
+```
+
+
+```{r eds-var-table, results ='asis'}
+# Create the gt table object and apply generic theme
+eds_gt_table <- gt(eds_word_long)
+
+# Table-specific formatting (col width, names)
+eds_gt_table <- eds_gt_table %>% 
+  cols_label(var_name = "Variable", 
+             description = "Description",
+             notes = "Notes") %>% 
+  apply_tbl_theme() %>% 
+  cols_width(notes ~ px(150),
+             var_name ~ px(100)) %>%
+  tab_style(style = cell_text(align = "left"), locations = cells_column_labels())
+
+# Print the table
+print(eds_gt_table)
+
+
+```
+
+#### Scale and Subscales
+
+Information on the total score and subscale variables are below. Variables were c
+onstructed by summing included items. 
+```{r eds df, echo = FALSE, eval = TRUE, message = FALSE, warning = FALSE}
+# TODO: this section might need move to data cleaning script
+# reverse scoring 
+eds <-
+  complete_rnd2 %>%
+  select(
+    id,
+    matches(
+      "^elf"
+    )
+  ) 
+#TODO: need to colculate total and average 
+  # composite_total_avg_fun(
+  #   id = c(
+  #     'id', "elf1_c", "elf2_c", "elf3_c", "elf7_c",
+  #     "elf12_c", "elf13_c", "elf15_c", "elf17_c", "elf18_c",
+  #     "elf19_c", "elf23_c", "elf26_c", "elf28_c", "elf30_c",
+  #     "elf34_c", "elf35_c", "elf36_c", "elf37_c"
+  #   ),
+  #   max_value = 4,
+  #   n_items = 21
+  # ) %>%
+  # distinct(
+  #   across(
+  #     .cols = everything()
+  #   )
+  # ) %>%
+  # rename(
+  #   elf_total = sum_values,
+  #   elf_avg = mean_values
+  # ) 
+
+```
+#Calculate internal reliability 
+```{r eds alpha, echo = FALSE, eval = TRUE, message = FALSE, warning = FALSE}
+#Calculate internal reliability 
+eds_alpha <- eds %>% 
+    select(matches("_c$")) %>% #TODO: this need to be changed based on df naming
+    psych::alpha(check.keys = TRUE)
+
+```
+TODO: all revers coded column is 0, need to double check, I used non-revers coded score for now 
+```{r EDS-scale-table, results = 'asis'}
+
+
+# Create the table as a data frame
+eds_scale_df <- data.frame(
+  var_name = c("eds_total"),
+  scale = c("EDS Total score (39)"),
+  scale_construction = c("`elf1`, `elf2`, `elf3`, `elf4`, `elf5`, `elf6`, `elf7`, 
+  `elf8`, `elf9`, `elf10`, `elf11`, `elf12`, `elf13`, `elf14`, `elf15`, `elf16`, 
+  `elf17`, `elf18`, `elf19`, `elf20`, `elf21`, `elf22`, `elf23`, `elf24`, `elf25`, 
+  `elf26`, `elf27`, `elf28`, `elf29`, `elf30`, `elf31`, `elf32`, `elf33`, `elf34`, 
+                         `elf35`, `elf36`, `elf37`, `elf38`, `elf39`"),
+  scale_range = c(""), #TODO fill in range 
+  alpha = c(round(eds_alpha$total$raw_alpha, 3))
+)
+
+# Create the gt table object
+eds_scale_df <- gt(eds_scale_df) %>%
+  cols_align(columns = c("scale_range"), align = "center") %>% 
+  cols_label(var_name = "Variable Name",
+             scale = "Scale (# of items)", 
+             scale_construction = "Scale Construction",
+             scale_range = "Range*",
+             alpha = "Alpha") %>% 
+  tab_footnote(footnote = "*Range of possible values; `_r` Reverse scored variable") %>% 
+  tab_options(table.border.bottom.style = "hidden") %>% 
+  cols_width(scale ~ px(135)) %>% 
+  apply_tbl_theme() 
+
+# Print the table
+print(eds_scale_df)
+
+
+```
+### Summary Statistics
+
+#### Descriptive Statistics
+
+Descriptive statistics are presented below for each item, total, and subscale score:
+  
+```{r eds-mean-items}
+# Calculate the summary statistics for each variable
+eds_summary_data <- lapply(eds, function(x) {
+  mean_val <- sprintf("%.2f", round(mean(x, na.rm = TRUE), 2))
+  sd_val <- round(sd(x, na.rm = TRUE), 2)
+  range_val <- paste(min(x, na.rm = TRUE), max(x, na.rm = TRUE), sep = "-")
+  miss_val <- round(mean(is.na(x)) * 100, 2)
+  c(Mean = mean_val, SD = sd_val, Range = range_val, Missing = paste(miss_val, "%", sep = ""))
+})
+
+# Convert summary_data to a data frame
+eds_summary_data <- as.data.frame(eds_summary_data)%>%select(-c(id))
+
+# Set items as first row
+eds_summary_data <- rbind(names(eds_summary_data), eds_summary_data) %>% 
+  t() %>% 
+  as.data.frame()
+
+# Create the gt table
+eds_tbl <- eds_summary_data %>%
+  gt() %>%
+  cols_label(`1` = "Variable",
+             Range = "Range*",
+             Missing = "% Missing") %>% 
+  cols_width(everything() ~ px(115)) %>%
+  cols_align(columns = c("Mean", "SD", "Range", "Missing"), align = "center") %>% 
+  tab_footnote("*Range of data values") %>% 
+  tab_options(table.border.bottom.style = "hidden") %>%
+  apply_tbl_theme()
+
+# Render the table
+eds_tbl
+
+```
+
+#### Distributions
+
+Distributions are presented below for the total score and each subscale:
+  
+```{r eds-distributions, class.source='fold', echo = FALSE}
+#TODO: make sure total is colculated 
+# eds %>%
+#   composite_hist(
+#     x = elf_total
+#   ) +
+#   labs(title = "Distribution of Total Scores for the Stigma & Shame Questionnaire")
+
+```
